--- a/public/components/stickey/stickey.less
+++ b/public/components/stickey/stickey.less
@@ -4,7 +4,7 @@
 	z-index: 1;
 
 	[data-stickey='content'] {
-		display: inline-block; // for bfc
+		zoom: 1; // for bfc
 	}
 	
 	&.stickey [data-stickey='content'] {
