--- a/public/styles/bootstrap/forms.less
+++ b/public/styles/bootstrap/forms.less
@@ -119,7 +119,6 @@ output {
   font-size: @font-size-base;
   font-weight: normal;
   line-height: @line-height-base;
-  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   color: @input-color;
