--- a/public/styles/misc/card.less
+++ b/public/styles/misc/card.less
@@ -79,9 +79,6 @@
 		color: @grey;
 	}
 
-.guide-nav--sub {
-	margin-left: -@gw-Sm;
-}
 .guide-card--admin {
 	.input-group-addon,
 	.input-group-btn,
@@ -114,53 +111,9 @@
 	&:hover > .btn {
 		opacity: 1;
 	}
-
-	/*&.guide-card--section + .guide-card--admin{
-		position: relative;
-
-		&:before {
-			content: ' ';
-			position: absolute;
-			left: @gw-Md;
-			width: 3px;
-			background: @grey-lighter;
-			top: 0;
-			height: @gw-Md;
-			z-index: 1;
-		}
-	}
-
-	&:last-of-type {
-		&:before {
-			content: ' ';
-			position: absolute;
-			left: @gw-Md;
-			width: 3px;
-			background: @grey-lighter;
-			
-			bottom: 0;
-			top: auto;
-			z-index: 1;
-			border-radius: 0;
-			height: 33px;
-		}
-	} */
 }
 	.guide-card--edit-mode {
 		margin-bottom: @gw-Sm;
-
-		&, .guide-card--wrapper, .guide-card {
-			&:before,
-			&:after {
-				display: none;
-			}
-		}
-
-		.guide-card--wrapper {
-			border: none;
-			padding-left: 0;
-			margin-left: 0; 
-		}
 
 		> .btn {
 			display: none;
@@ -191,10 +144,62 @@
 		}
 	}
 
+	.card-styles--preview {
+		margin: 0 auto;
+	}
+
 .guide-card--card {
-	margin: 0 0 0 -@gw-Sm;
-	padding: 0 0 @gw-Md @gw-Md;
-	border-left: 1px solid @grey;
+	position: relative;
+	padding: 0 0 @gw-Md;
+
+	&:before {
+		display: block;
+		position: absolute;
+		width: 1px;
+		background: @grey-dark;
+		bottom: @gw-Xl;
+		top: -@gw-Xl;
+		left: -@gw-Sm - 1;
+	}
+
+	&:after {
+		height: @gw-Sm + 1;
+		width: @gw-Sm + 1;
+		border-radius: 50%;
+		display: block;
+		position: absolute;
+		left: -@gw-Sm - @gw-Xs - 1;
+		top: @gw-Md - @gw-Xs;
+		background: @grey-dark;
+	}
+	
+	.guide-card--card__section ~ &:before,
+	.guide-card--card__section ~ &:after {
+		content: ' ';
+	}
+
+	+ .guide-card--card:after {
+		display: none;
+	}
+
+	.guide-card--card__section + &:before {
+		top: @gw-Md;
+	}
+
+	.guide-card--card__section + &:after {
+		display: block;
+	}
+
+	.guide-card--card__section ~ .guide-card--card:not(.guide-card--card__section) + &.guide-card--card__section:after {
+		top: -@gw-XXl - @gw-Md;
+		display: block;
+	}
+
+	&:last-child:after {
+		display: block;
+		top: auto;
+		bottom: @gw-Xl - @gw-Sm;
+	}
 }
 	.guide-card--body {
 		.card;
@@ -211,27 +216,111 @@
 		font-size: 1.3em;
 	}
 
-	.guide-card--card__section {}
+	.guide-card--text > *:last-child {
+		margin-bottom: 0;
+	}
+
+	.guide-card--card__section {
+		font-size: 1.5em;
+		text-align: center;
+		margin-top: @gw-Lg;
+		margin-bottom: @gw-Md;
+		padding-bottom: 0;
+
+		&:before{
+			display: none;
+		}
+
+		.guide-card--title {
+			font-weight: bold;
+		}
+
+		.guide-card--text {
+			line-height: 1.2;
+		}
+	}
 	.guide-card--card__sub {
 		.guide-card--body {
 			background: @grey-light;
 			text-align: center;
 		}
+
+		.guide-card--title {
+			margin: 0;
+		}
+
+		&:after {
+			display: block;
+		}
 	}
 
-	.guide-card--card__big {}
-	.guide-card--card__small {margin-top: 0; position: relative;}
+	.guide-card--card__big {
+		.guide-card--body {
+			padding: 0;
+		}
+
+		.guide-card--title {
+			padding: @gw-Sm @gw-Sm 0;
+			margin: 0;
+		}
+
+		.guide-card--text {
+			padding: 0 @gw-Sm @gw-Sm;
+		}
+	}
+	.guide-card--card__small {
+		margin-top: -@gw-Md - 1;
+		position: relative;
+
+		.guide-card--body {
+			padding: 0;
+			border-radius: 0 0 @br-Md @br-Md;
+
+			display: flex;
+
+			> div {
+				width: 75%;
+				padding: @gw-Sm;
+			}
+
+			.guide-card--img {
+				width: 25%;
+			}
+		}
+	}
 
 	.guide-card--card__img {}
 
 	.guide-card--card__plain {}
 	.guide-card--card__white {}
-	.guide-card--card__danger {}
-	.guide-card--card__success {}
-	.guide-card--card__info {}
+	.guide-card--card__danger {
+		.guide-card--body{
+			.alert;
+			.alert-variant(@alert-danger-bg; @alert-danger-border; @alert-danger-text);
+		}
+	}
+	.guide-card--card__success {
+		.guide-card--body{
+			.alert;
+			.alert-variant(@alert-success-bg; @alert-success-border; @alert-success-text);
+		}
+	}
+	.guide-card--card__info {
+		.guide-card--body{
+			.alert;
+			.alert-variant(@alert-info-bg; @alert-info-border; @alert-info-text);
+		}
+	}
 
-
-	
+	.guide-card--card__plain,
+	.guide-card--card__white,
+	.guide-card--card__danger,
+	.guide-card--card__success,
+	.guide-card--card__info {
+		.guide-card--body {
+			margin: 0;
+		}
+	}	
 
 		.guide-card--img-wrapper {
 			.guide-card--card__sub & {
