--- a/public/styles/pages/_page-structure.less
+++ b/public/styles/pages/_page-structure.less
@@ -1,5 +1,5 @@
 html, body{
-	min-height: 100%;
+	height: 100%;
 }
 
 body {
@@ -11,7 +11,7 @@ body {
 
 	.site-body{
 		display: table-row;
-		min-height: 100%;
+		height: 100%;
 	}
 
 .site-header {
